--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -18,9 +18,21 @@ foreach (test ${testnames})
   elseif (${test} MATCHES operators)
     list(APPEND operators_test_binaries ${test})
   elseif (${test} MATCHES projections)
-    list(APPEND projections_test_binaries ${test})
+    if (${test} MATCHES fem)
+      list(APPEND projections_fem_test_binaries ${test})
+    elseif (${test} MATCHES pdelab)
+      list(APPEND projections_pdelab_test_binaries ${test})
+    else (${test})
+      list(APPEND projections_default_test_binaries ${test})
+    endif (${test})
   elseif (${test} MATCHES prolongations)
-    list(APPEND prolongations_test_binaries ${test})
+    if (${test} MATCHES fem)
+      list(APPEND prolongations_fem_test_binaries ${test})
+    elseif (${test} MATCHES pdelab)
+      list(APPEND prolongations_pdelab_test_binaries ${test})
+    else (${test})
+      list(APPEND prolongations_default_test_binaries ${test})
+    endif (${test})
   elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES alugrid)
     list(APPEND linearelliptic_cg_alugrid_test_binaries ${test})
   elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES sgrid)
@@ -34,8 +46,12 @@ endforeach (test ${testnames})
 
 add_custom_target(test_binaries_space DEPENDS ${spaces_test_binaries})
 add_custom_target(test_binaries_operator DEPENDS ${operators_test_binaries})
-add_custom_target(test_binaries_projection DEPENDS ${projections_test_binaries})
-add_custom_target(test_binaries_prolongation DEPENDS ${prolongations_test_binaries})
+add_custom_target(test_binaries_projection_default DEPENDS ${projections_default_test_binaries})
+add_custom_target(test_binaries_projection_fem DEPENDS ${projections_fem_test_binaries})
+add_custom_target(test_binaries_projection_pdelab DEPENDS ${projections_test_pdelab_binaries})
+add_custom_target(test_binaries_prolongation_default DEPENDS ${prolongations_default_test_binaries})
+add_custom_target(test_binaries_prolongation_fem DEPENDS ${prolongations_fem_test_binaries})
+add_custom_target(test_binaries_prolongation_pdelab DEPENDS ${prolongations_pdelab_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_cg_alugrid_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_cg_sgrid_test_binaries})
 add_custom_target(test_binaries_hyperbolic_fv_discretization_yaspgrid DEPENDS ${hyperbolic_yaspgrid_test_binaries})
