--- a/.travis.yml
+++ b/.travis.yml
@@ -156,11 +156,27 @@ matrix:
     - os: linux
       compiler: gcc
       addons:  *gcc5
-      env: CC=gcc-5 TESTS=prolongation BLD=${DBG} CXX=g++-5
+      env: CC=gcc-5 TESTS=prolongation_default BLD=${DBG} CXX=g++-5
     - os: linux
       compiler: gcc
       addons:  *gcc5
-      env: CC=gcc-5 TESTS=projection BLD=${DBG} CXX=g++-5
+      env: CC=gcc-5 TESTS=prolongation_fem BLD=${DBG} CXX=g++-5
+    - os: linux
+      compiler: gcc
+      addons:  *gcc5
+      env: CC=gcc-5 TESTS=prolongation_pdelab BLD=${DBG} CXX=g++-5
+    - os: linux
+      compiler: gcc
+      addons:  *gcc5
+      env: CC=gcc-5 TESTS=projection_default BLD=${DBG} CXX=g++-5
+    - os: linux
+      compiler: gcc
+      addons:  *gcc5
+      env: CC=gcc-5 TESTS=projection_fem BLD=${DBG} CXX=g++-5
+    - os: linux
+      compiler: gcc
+      addons:  *gcc5
+      env: CC=gcc-5 TESTS=projection_pdelab BLD=${DBG} CXX=g++-5
     - os: linux
       compiler: gcc
       addons:  *gcc5
@@ -201,11 +217,27 @@ matrix:
     - os: linux
       compiler: clang
       addons:  *clang37
-      env: CC=clang-3.7 TESTS=prolongation BLD=${DBG} CXX=clang++-3.7
+      env: CC=clang-3.7 TESTS=prolongation_default BLD=${DBG} CXX=clang++-3.7
     - os: linux
       compiler: clang
       addons:  *clang37
-      env: CC=clang-3.7 TESTS=projection BLD=${DBG} CXX=clang++-3.7
+      env: CC=clang-3.7 TESTS=prolongation_fem BLD=${DBG} CXX=clang++-3.7
+    - os: linux
+      compiler: clang
+      addons:  *clang37
+      env: CC=clang-3.7 TESTS=prolongation_pdelab BLD=${DBG} CXX=clang++-3.7
+    - os: linux
+      compiler: clang
+      addons:  *clang37
+      env: CC=clang-3.7 TESTS=projection_default BLD=${DBG} CXX=clang++-3.7
+    - os: linux
+      compiler: clang
+      addons:  *clang37
+      env: CC=clang-3.7 TESTS=projection_fem BLD=${DBG} CXX=clang++-3.7
+    - os: linux
+      compiler: clang
+      addons:  *clang37
+      env: CC=clang-3.7 TESTS=projection_pdelab BLD=${DBG} CXX=clang++-3.7
     - os: linux
       compiler: clang
       addons:  *clang37
