Revert "[travis] --disable-parallel"
This reverts commit 16c8156eb25937f9a073813e6edd8df411081f0f.

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ before_install:
 install:
   - cd $HOME/src
   #- export INST_DCTRL=$HOME/dune/bin/dunecontrol
-  - export SRC_DCTRL="$PWD/dune-common/bin/dunecontrol --disable-parallel"
+  - export SRC_DCTRL=$PWD/dune-common/bin/dunecontrol
   - ${SRC_DCTRL} ${BLD} all
   # move my travis checkout into this source tree
   - cp -ra ${TRAVIS_BUILD_DIR} .
