[cmake] simplify expectations handling
Not taking the extra step of single object files greatly simplifies the
situation and allows us to properly use the dune_add_..._flags(...) macros.

Fixes #65

--- a/dune/gdt/test/linearelliptic/CMakeLists.txt
+++ b/dune/gdt/test/linearelliptic/CMakeLists.txt
@@ -4,71 +4,28 @@
 # License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 
 # expectation targets
-add_library(obj_tests_linearelliptic_eocexpectations_cg_ao2013_2dalugrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-ao2013-2dalugrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_ao2013_2dsgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-ao2013-2dsgrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_er2007_2dalugrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-er2007-2dalugrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_er2007_2dsgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-er2007-2dsgrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_esv2007_2dalugrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-esv2007-2dalugrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_esv2007_2dsgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-esv2007-2dsgrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_mixedboundary_2dalugrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-mixedboundary-2dalugrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_mixedboundary_2dsgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-mixedboundary-2dsgrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_spe10_2dalugrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-spe10-2dalugrid.cxx)
-add_library(obj_tests_linearelliptic_eocexpectations_cg_spe10_2dsgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-cg-spe10-2dsgrid.cxx)
-# add alugrid compile flags for the above objects (add_dune_alugrid_flags does not work here)
-foreach(_target obj_tests_linearelliptic_eocexpectations_cg_ao2013_2dalugrid
-                obj_tests_linearelliptic_eocexpectations_cg_er2007_2dalugrid
-                obj_tests_linearelliptic_eocexpectations_cg_esv2007_2dalugrid
-                obj_tests_linearelliptic_eocexpectations_cg_mixedboundary_2dalugrid
-                obj_tests_linearelliptic_eocexpectations_cg_spe10_2dalugrid)
-  add_dune_alugrid_compile_flags(${_target})
-endforeach(_target)
-
-# test target libs
 add_library(lib_test_linearelliptic_cg_discretizations_sgrid
             STATIC
             EXCLUDE_FROM_ALL
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_ao2013_2dsgrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_er2007_2dsgrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_esv2007_2dsgrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_mixedboundary_2dsgrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_spe10_2dsgrid>)
+            eocexpectations-cg-ao2013-2dsgrid.cxx
+            eocexpectations-cg-er2007-2dsgrid.cxx
+            eocexpectations-cg-esv2007-2dsgrid.cxx
+            eocexpectations-cg-mixedboundary-2dsgrid.cxx
+            eocexpectations-cg-spe10-2dsgrid.cxx)
 add_library(lib_test_linearelliptic_cg_discretizations_alugrid
             STATIC
             EXCLUDE_FROM_ALL
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_ao2013_2dalugrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_er2007_2dalugrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_esv2007_2dalugrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_mixedboundary_2dalugrid>
-            $<TARGET_OBJECTS:obj_tests_linearelliptic_eocexpectations_cg_spe10_2dalugrid>)
-add_dune_alugrid_flags(lib_test_linearelliptic_cg_discretizations_alugrid)
+            eocexpectations-cg-ao2013-2dalugrid.cxx
+            eocexpectations-cg-er2007-2dalugrid.cxx
+            eocexpectations-cg-esv2007-2dalugrid.cxx
+            eocexpectations-cg-mixedboundary-2dalugrid.cxx
+            eocexpectations-cg-spe10-2dalugrid.cxx)
 
+# add some compile flags
+foreach (_target lib_test_linearelliptic_cg_discretizations_alugrid)
+  add_dune_alugrid_flags(${_target})
+endforeach (_target)
+foreach (_target lib_test_linearelliptic_cg_discretizations_alugrid
+                 lib_test_linearelliptic_cg_discretizations_sgrid)
+  add_dune_mpi_flags(${_target})
+endforeach (_target)
