[test.hyperbolic.CMakeLists.txt] same simplification as for linearelliptic

--- a/dune/gdt/test/hyperbolic/CMakeLists.txt
+++ b/dune/gdt/test/hyperbolic/CMakeLists.txt
@@ -4,60 +4,20 @@
 # License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 
 # expectation targets
-add_library(obj_tests_hyperbolic_eocexpectations_fv_sourcebeam_1dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-sourcebeam-1dyaspgrid.cxx)
-add_library(obj_tests_hyperbolic_eocexpectations_fv_boltzmanncheckerboard_2dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-boltzmanncheckerboard-2dyaspgrid.cxx)
-add_library(obj_tests_hyperbolic_eocexpectations_fv_burgers_1dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-burgers-1dyaspgrid.cxx)
-add_library(obj_tests_hyperbolic_eocexpectations_fv_burgers_2dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-burgers-2dyaspgrid.cxx)
-add_library(obj_tests_hyperbolic_eocexpectations_fv_transport_1dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-transport-1dyaspgrid.cxx)
-add_library(obj_tests_hyperbolic_eocexpectations_fv_transport_2dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-transport-2dyaspgrid.cxx)
-add_library(obj_tests_hyperbolic_eocexpectations_fv_shallowwater_1dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-shallowwater-1dyaspgrid.cxx)
-add_library(obj_tests_hyperbolic_eocexpectations_fv_shocktube_1dyaspgrid
-            OBJECT
-            EXCLUDE_FROM_ALL
-            eocexpectations-fv-shocktube-1dyaspgrid.cxx)
-# add alugrid compile flags for the above objects (add_dune_alugrid_flags does not work here)
-foreach(_target obj_tests_hyperbolic_eocexpectations_fv_boltzmanncheckerboard_2dyaspgrid
-		obj_tests_hyperbolic_eocexpectations_fv_sourcebeam_1dyaspgrid
-                obj_tests_hyperbolic_eocexpectations_fv_burgers_1dyaspgrid
-		obj_tests_hyperbolic_eocexpectations_fv_burgers_2dyaspgrid
-		obj_tests_hyperbolic_eocexpectations_fv_transport_1dyaspgrid
-		obj_tests_hyperbolic_eocexpectations_fv_transport_2dyaspgrid
-		obj_tests_hyperbolic_eocexpectations_fv_shallowwater_1dyaspgrid
-		obj_tests_hyperbolic_eocexpectations_fv_shocktube_1dyaspgrid)
-  add_dune_alugrid_compile_flags(${_target})
-endforeach(_target)
-
-# test target libs
 add_library(lib_test_hyperbolic_fv_discretizations_yaspgrid
-            STATIC
+	    STATIC
             EXCLUDE_FROM_ALL
-	    $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_sourcebeam_1dyaspgrid>
-	    $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_boltzmanncheckerboard_2dyaspgrid>
-            $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_burgers_1dyaspgrid>
-            $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_burgers_2dyaspgrid>
-            $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_transport_1dyaspgrid>
-            $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_transport_2dyaspgrid>
-            $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_shallowwater_1dyaspgrid>
-            $<TARGET_OBJECTS:obj_tests_hyperbolic_eocexpectations_fv_shocktube_1dyaspgrid>)
+            eocexpectations-fv-sourcebeam-1dyaspgrid.cxx
+            eocexpectations-fv-boltzmanncheckerboard-2dyaspgrid.cxx
+            eocexpectations-fv-burgers-1dyaspgrid.cxx
+            eocexpectations-fv-burgers-2dyaspgrid.cxx
+            eocexpectations-fv-transport-1dyaspgrid.cxx
+            eocexpectations-fv-transport-2dyaspgrid.cxx
+            eocexpectations-fv-shallowwater-1dyaspgrid.cxx
+            eocexpectations-fv-shocktube-1dyaspgrid.cxx)
+
+# add some compile flags
+foreach (_target lib_test_hyperbolic_fv_discretizations_yaspgrid)
+  add_dune_mpi_flags(${_target})
+endforeach (_target)
 
