[test.linearelliptic] add expected results for SWIPDG
This is basically a copy of the results in
`test/elliptic-swipdg-discretization.hh`, apart from the Spe10 testcase,
which has changed to something physically more meaningful in the meantime.

--- a/dune/gdt/test/linearelliptic/CMakeLists.txt
+++ b/dune/gdt/test/linearelliptic/CMakeLists.txt
@@ -4,6 +4,7 @@
 # License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 
 # expectation targets
+# CG
 add_library(lib_test_linearelliptic_cg_discretizations_sgrid
             STATIC
             EXCLUDE_FROM_ALL
@@ -21,11 +22,32 @@ add_library(lib_test_linearelliptic_cg_discretizations_alugrid
             eocexpectations-cg-mixedboundary-2dalugrid.cxx
             eocexpectations-cg-spe10-2dalugrid.cxx)
 
+# SWIPDG
+add_library(lib_test_linearelliptic_swipdg_discretizations_sgrid
+            STATIC
+            EXCLUDE_FROM_ALL
+            eocexpectations-swipdg-ao2013-2dsgrid.cxx
+            eocexpectations-swipdg-er2007-2dsgrid.cxx
+            eocexpectations-swipdg-esv2007-2dsgrid.cxx
+            eocexpectations-swipdg-mixedboundary-2dsgrid.cxx
+            eocexpectations-swipdg-spe10-2dsgrid.cxx)
+add_library(lib_test_linearelliptic_swipdg_discretizations_alugrid
+            STATIC
+            EXCLUDE_FROM_ALL
+            eocexpectations-swipdg-ao2013-2dalugrid.cxx
+            eocexpectations-swipdg-er2007-2dalugrid.cxx
+            eocexpectations-swipdg-esv2007-2dalugrid.cxx
+            eocexpectations-swipdg-mixedboundary-2dalugrid.cxx
+            eocexpectations-swipdg-spe10-2dalugrid.cxx)
+
 # add some compile flags
-foreach (_target lib_test_linearelliptic_cg_discretizations_alugrid)
+foreach (_target lib_test_linearelliptic_cg_discretizations_alugrid
+                 lib_test_linearelliptic_swipdg_discretizations_alugrid)
   add_dune_alugrid_flags(${_target})
 endforeach (_target)
 foreach (_target lib_test_linearelliptic_cg_discretizations_alugrid
-                 lib_test_linearelliptic_cg_discretizations_sgrid)
+                 lib_test_linearelliptic_cg_discretizations_sgrid
+                 lib_test_linearelliptic_swipdg_discretizations_alugrid
+                 lib_test_linearelliptic_swipdg_discretizations_sgrid)
   add_dune_mpi_flags(${_target})
 endforeach (_target)
