[linearelliptic.swipdg-discretization] add first draft of tests

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -37,6 +37,10 @@ foreach (test ${testnames})
     list(APPEND linearelliptic_cg_alugrid_test_binaries ${test})
   elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES sgrid)
     list(APPEND linearelliptic_cg_sgrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic__swipdg AND ${test} MATCHES alugrid)
+    list(APPEND linearelliptic_swipdg_alugrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic__swipdg AND ${test} MATCHES sgrid)
+    list(APPEND linearelliptic_swipdg_sgrid_test_binaries ${test})
   elseif (${test} MATCHES hyperbolic AND ${test} MATCHES yaspgrid)
     list(APPEND hyperbolic_yaspgrid_test_binaries ${test})
   else (${test})
@@ -54,6 +58,8 @@ add_custom_target(test_binaries_prolongation_fem DEPENDS ${prolongations_fem_tes
 add_custom_target(test_binaries_prolongation_pdelab DEPENDS ${prolongations_pdelab_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_cg_alugrid_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_cg_sgrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_swipdg_discretization_alugrid DEPENDS ${linearelliptic_swipdg_alugrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_swipdg_discretization_sgrid DEPENDS ${linearelliptic_swipdg_sgrid_test_binaries})
 add_custom_target(test_binaries_hyperbolic_fv_discretization_yaspgrid DEPENDS ${hyperbolic_yaspgrid_test_binaries})
 add_custom_target(test_binaries_other DEPENDS ${other_binaries})
 
@@ -76,4 +82,14 @@ target_link_libraries(test_linearelliptic__cg_discretization__alugrid_pdelab_eig
 target_link_libraries(test_linearelliptic__cg_discretization__sgrid_pdelab_eigen   lib_test_linearelliptic_cg_discretizations_sgrid)
 target_link_libraries(test_linearelliptic__cg_discretization__alugrid_pdelab_istl  lib_test_linearelliptic_cg_discretizations_alugrid)
 target_link_libraries(test_linearelliptic__cg_discretization__sgrid_pdelab_istl    lib_test_linearelliptic_cg_discretizations_sgrid)
-target_link_libraries(test_hyperbolic__fv_discretization__yaspgrid                 lib_test_hyperbolic_fv_discretizations_yaspgrid)
+
+target_link_libraries(test_linearelliptic__swipdg_discretization__alugrid_fem_eigen    lib_test_linearelliptic_swipdg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_fem_eigen      lib_test_linearelliptic_swipdg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__alugrid_fem_istl     lib_test_linearelliptic_swipdg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_fem_istl       lib_test_linearelliptic_swipdg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__alugrid_pdelab_eigen lib_test_linearelliptic_swipdg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_pdelab_eigen   lib_test_linearelliptic_swipdg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__alugrid_pdelab_istl  lib_test_linearelliptic_swipdg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_pdelab_istl    lib_test_linearelliptic_swipdg_discretizations_sgrid)
+
+target_link_libraries(test_hyperbolic__fv_discretization__yaspgrid lib_test_hyperbolic_fv_discretizations_yaspgrid)
