[travis] add metis and parmetis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ addons:
     - lcov
     - curl
     - python3-requests
+    - libmetis-dev
+    - metis
+    - libparmetis-dev
 
 before_install:
   - |-
