--- a/.travis.yml
+++ b/.travis.yml
@@ -96,7 +96,7 @@ env:
     - DCTL_ARGS="--builddir=${DUNE_BUILD_DIR} --use-cmake"
     - DBG="${DCTL_ARGS} --opts=config.opts/travis.make.debug"
     - REL="${DCTL_ARGS} --opts=config.opts/travis.make.release"
-    - CONFIGURE_FLAGS="--with-metis=$BASEDIR/local --with-parmetis=$BASEDIR/local"
+    - CONFIGURE_FLAGS="--with-metis=/home/travis/src/local --with-parmetis=/home/travis/src/local"
 
 matrix:
   include:
