--- a/dune/gdt/test/linearelliptic/CMakeLists.txt
+++ b/dune/gdt/test/linearelliptic/CMakeLists.txt
@@ -4,3 +4,4 @@
 # License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 
 add_subdirectory(eocexpectations)
+add_subdirectory(swipdg-estimator-expectations)
