--- a/.travis.yml
+++ b/.travis.yml
@@ -206,6 +206,10 @@ matrix:
     - os: linux
       compiler: gcc
       addons:  *gcc5
+      env: CC=gcc-5 TESTS=linearelliptic_swipdg_estimator_alugrid BLD=${DBG} CXX=g++-5
+    - os: linux
+      compiler: gcc
+      addons:  *gcc5
       env: CC=gcc-5 TESTS=hyperbolic_fv_discretization_yaspgrid BLD=${DBG} CXX=g++-5
     - os: linux
       compiler: gcc
@@ -272,6 +276,10 @@ matrix:
       compiler: clang
       addons:  *clang37
       env: CC=clang-3.7 TESTS=linearelliptic_swipdg_discretization_sgrid BLD=${DBG} CXX=clang++-3.7
+    - os: linux
+      compiler: clang
+      addons:  *clang37
+      env: CC=clang-3.7 TESTS=linearelliptic_swipdg_estimator_alugrid BLD=${DBG} CXX=clang++-3.7
     - os: linux
       compiler: clang
       addons:  *clang37
