[cmake] add missing test_binaries_linearelliptic_swipdg_estimator_alugrid

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -40,10 +40,12 @@ foreach (test ${testnames})
     list(APPEND linearelliptic_cg_alugrid_test_binaries ${test})
   elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES sgrid)
     list(APPEND linearelliptic_cg_sgrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__swipdg AND ${test} MATCHES alugrid)
-    list(APPEND linearelliptic_swipdg_alugrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__swipdg AND ${test} MATCHES sgrid)
-    list(APPEND linearelliptic_swipdg_sgrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic__swipdg_discretization AND ${test} MATCHES alugrid)
+    list(APPEND linearelliptic_swipdg_discretization_alugrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic__swipdg_discretization AND ${test} MATCHES sgrid)
+    list(APPEND linearelliptic_swipdg_discretization_sgrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic__swipdg_estimators)
+    list(APPEND linearelliptic_swipdg_estimator_alugrid_test_binaries ${test})
   elseif (${test} MATCHES hyperbolic AND ${test} MATCHES yaspgrid)
     list(APPEND hyperbolic_yaspgrid_test_binaries ${test})
   else (${test})
@@ -61,8 +63,9 @@ add_custom_target(test_binaries_prolongation_fem DEPENDS ${prolongations_fem_tes
 add_custom_target(test_binaries_prolongation_pdelab DEPENDS ${prolongations_pdelab_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_cg_alugrid_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_cg_sgrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_swipdg_discretization_alugrid DEPENDS ${linearelliptic_swipdg_alugrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_swipdg_discretization_sgrid DEPENDS ${linearelliptic_swipdg_sgrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_swipdg_discretization_alugrid DEPENDS ${linearelliptic_swipdg_discretization_alugrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_swipdg_discretization_sgrid DEPENDS ${linearelliptic_swipdg_discretization_sgrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_swipdg_estimator_alugrid DEPENDS ${linearelliptic_swipdg_estimator_alugrid_test_binaries})
 add_custom_target(test_binaries_hyperbolic_fv_discretization_yaspgrid DEPENDS ${hyperbolic_yaspgrid_test_binaries})
 add_custom_target(test_binaries_other DEPENDS ${other_binaries})
 
