--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,6 @@ addons:
 before_install:
   - |-
     : ${OPTS:="config.opts/travis.ninja"} && export OPTS
-  - |-
-    : ${BUILD_CMD:="ninja -k 10000 -j 2"} && export BUILD_CMD
   # workaround for https://github.com/travis-ci/travis-ci/issues/5285
   - sudo -E apt-get install -y -q python-pip python3-pip
   - sudo -E pip3 install -U requests virtualenv cpp-coveralls
@@ -64,17 +62,17 @@ install:
 before_script:
     - $HOME/src/.travis/add_swap.sh
     - ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} configure
-    - if [[ "x${TESTS}" != "xheadercheck" ]]; then ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec ${BUILD_CMD}; fi
-    - if [[ "x${TESTS}" != "xheadercheck" ]]; then ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec ${BUILD_CMD} test_binaries_${TESTS}; fi
+    - if [[ "x${TESTS}" != "xheadercheck" ]]; then ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} make; fi
+    - if [[ "x${TESTS}" != "xheadercheck" ]]; then ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} make test_binaries_${TESTS}; fi
 
 script:
     - if [[ "x${TESTS}" != "xheadercheck" ]]; then travis_wait ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec ctest -j 2 -R ${TESTS//_/.+}; fi
-    - if [[ "x${TESTS}" == "xheadercheck" ]]; then ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec ${BUILD_CMD} headercheck; fi
+    - if [[ "x${TESTS}" == "xheadercheck" ]]; then ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} make headercheck; fi
     - $HOME/src/.travis/init_sshkey.sh ${encrypted_95fb78800815_key} ${encrypted_95fb78800815_iv} keys/dune-community/dune-gdt-testlogs
     # retry this step because of the implicated race condition in cloning and pushing with multiple builder running in parallel
     - if [[ "x${TESTS}" != "xheadercheck" ]]; then travis_retry $HOME/src/scripts/bash/travis_upload_test_logs.bash $HOME/src/${MY_MODULE}/${DUNE_BUILD_DIR}/dune/gdt/test/; fi
-    - ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec ${BUILD_CMD} install | grep -v "Installing"
-    - ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec ${BUILD_CMD} package_source
+    - ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} make install | grep -v "Installing"
+    - ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} make package_source
 
 # runs independent of 'script' failure/success
 after_script:
@@ -85,12 +83,12 @@ after_script:
      fi
     - |
       if [[ $TRAVIS_JOB_NUMBER == *.1 ]] ; then
-        ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec ${BUILD_CMD} doc
+        ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} make doc
         $HOME/src/.travis/init_sshkey.sh ${encrypted_95fb78800815_key} ${encrypted_95fb78800815_iv} keys/dune-community/dune-community.github.io
         $HOME/src/.travis/deploy_docs.sh ${MY_MODULE} ${DUNE_BUILD_DIR}
       fi
     # reset for ctest
-    - ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} bexec make clean
+    - ${SRC_DCTRL} ${BLD} --only=${MY_MODULE} make clean
     - export CTEST_ARG="--output-on-failure -S ${TRAVIS_BUILD_DIR}/.travis.ctest"
     # ctest errors on coverage gathering, this should NOT fail our entire build
     #- ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec ctest ${CTEST_ARG} || echo "CTest Failed"
