use dune-2.4 branch of super repo, revert after merge!

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ before_install:
   - cd $HOME
   - test -d src || git clone https://github.com/dune-community/dune-gdt-super.git src
   - cd $HOME/src
+  - git checkout dune-2.4
   - git submodule update --init --recursive
   - git submodule status
   # our local scripts look for an OPTS env entry
