--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ before_install:
   - sudo -E apt-get install -y -q python-pip python3-pip libscotchparmetis-dev libmetis-dev
   - sudo -E pip3 install -U requests virtualenv cpp-coveralls
   - sudo -E pip install -U requests virtualenv cpp-coveralls
+  - sudo -E add-apt-repository -y ppa:git-core/ppa && sudo -E aptitude update && sudo -E aptitude install git
   - export PATH=/usr/lib/ccache:$PATH
   - cd $HOME
   - test -d src || git clone https://github.com/dune-community/dune-gdt-super.git src
