--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ before_install:
   - sudo -E apt-get install -y -q python-pip python3-pip libscotchparmetis-dev libmetis-dev
   - sudo -E pip3 install -U requests virtualenv cpp-coveralls
   - sudo -E pip install -U requests virtualenv cpp-coveralls
-  - sudo -E add-apt-repository -y ppa:git-core/ppa && sudo -E aptitude update && sudo -E aptitude install git -yq
+  # workaround for gnutls bug is using git built against curl-openssl
+  - sudo -E add-apt-repository -y ppa:pymor/travis && sudo -E aptitude update && sudo -E aptitude install git -yq
   - export PATH=/usr/lib/ccache:$PATH
   - cd $HOME
   - test -d src || git clone https://github.com/dune-community/dune-gdt-super.git src
